fix length overlapping price #1024

--- a/app/assets/stylesheets/rightboat/boats.less
+++ b/app/assets/stylesheets/rightboat/boats.less
@@ -86,7 +86,9 @@
   }
   .small { font-size: 12px; }
 }
-.boat-thumb-specs-price { float: right; }
+.boat-thumb-specs-length,
+.boat-thumb-specs-year { white-space: nowrap; }
+.boat-thumb-specs-price { text-align: right; }
 .boat-thumb-specs-tax-status { font-size: 14px; margin-left: 1ex; }
 
 .boat-thumb-links {
@@ -229,7 +231,6 @@
     display: none;
   }
   .boat-thumb-specs-price {
-    float: none;
     text-align: center;
     font-size: 0.85em;
   }
